Read the log if you want to what got updated!

--- a/Content/Game/Settings.json
+++ b/Content/Game/Settings.json
@@ -12,7 +12,7 @@
         "MoveRight1": "d",
         "MoveLeft2": "left",
         "MoveRight2": "right",
-        "Close_Door": "left_shift"
+        "Close_Door": "space"
     },
     "Textures":
     {
